fixed components/about spacing

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,4 +1,5 @@
 .about-main-container {
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
