--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -11,7 +11,7 @@
 
 .about-section {
   padding: 0 15%;
-  margin: 0 0 17% -120px;
+  margin-left: -120px;
 }
 
 .works-section {
